SkinZam: Footer update, meta description Special:Welcome: slideshow width/height fix, comments, triptic fix ressource loader: backstretch (top -> bottom), carzam (bottom->top)

--- a/WikiZam/extensions/CarZam/modules/ext.carzam.carrousel.css
+++ b/WikiZam/extensions/CarZam/modules/ext.carzam.carrousel.css
@@ -202,6 +202,8 @@
 
 .slideshow div.wrapper {
     padding: 0 10px;
+    width: 499px;
+    height: 190px;
 }
 
 .mw-special-Welcome .slideshow a { color: #4D4E4F; }
